# klint-not_using_prelude

./: Cargo.toml
src/: callbacks.rs  ctxt.rs  main.rs  serde.rs
src/diagnostic/: mod.rs  use_stack.rs
src/hir_lints/: mod.rs  not_using_prelude.rs
tests/: compile-test.rs
tests/lint-prelude/: Cargo.toml
tests/lint-prelude/dep/: Cargo.toml
tests/lint-prelude/dep/src/: lib.rs
tests/lint-prelude/src/: main.rs
tests/ui/: check-prelude.rs  check-prelude.stderr
tests/utils/: prelude.rs
