[package]
name = "klint-asterinas"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.38.0", features = ["bundled"] }

[dev-dependencies]
compiletest = { version = "0.11.2", package = "compiletest_rs" }

[package.metadata.rust-analyzer]
# This crate uses #![feature(rustc_private)]
rustc_private = true
